# mdlib

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: config.rs  embedded.rs  fs.rs  main.rs  server.rs
static/: index.html
static/css/: styles.css
static/js/: app.js
